[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/img/Star.png" type="Texture" id=1]
[ext_resource path="res://src/entities/PlayerBullet.gd" type="Script" id=2]
[ext_resource path="res://assets/img/light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 100.0
angle = 180.0
angle_random = 1.0
scale = 0.05
scale_random = 0.1
color = Color( 1, 1, 1, 0.121569 )

[node name="PlayerBullet" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
rotation = 0.628319
scale = Vector2( 0.160005, 0.159904 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 40
lifetime = 0.5
one_shot = true
explosiveness = 0.8
randomness = 1.0
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
light_mask = 3
texture = ExtResource( 3 )
texture_scale = 0.2
color = Color( 0, 0.882353, 1, 1 )
energy = 0.5
[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
